--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -20,6 +20,7 @@
   .footer-li, a {
     font-size: 14px;
     color: #6c767d;
+    text-decoration: none;
   }
 
   a:hover {
